Add basic unit tests; add README

--- a/setup.cfg
+++ b/setup.cfg
@@ -1,2 +1,6 @@
 [mypy-esper]
 ignore_missing_imports = True
+[mypy-pytest]
+ignore_missing_imports = True
+[mypy-_pytest.monkeypatch]
+ignore_missing_imports = True
